recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:6: error: not found: value crabe
    crabe(levels-1,length/2)
    ^Crab:8: error: not found: value crabe
    crabe(levels-1,length/2)
    ^Crab:10: error: not found: value crabe
    crabe(levels-1,length/2)
    ^Crab:12: error: not found: value crabe
    crabe(levels-1,length/2)
    ^