recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  if (levels==0){
    avance(length)
  }
  else {
    crabe(levels-1,length/2)
    gauche(45)
    crabe(levels-1,length/2)
    droite(90)
    crabe(levels-1,length/2)
    gauche(45)
    crabe(levels-1,length/2)
  }
}